--- a/CleanArchitecture/Core/Config/Release.xcconfig
+++ b/CleanArchitecture/Core/Config/Release.xcconfig
@@ -5,6 +5,6 @@
 //  Created by Niraj Paul on 1/1/25.
 //
 
-EHYUNDAI_BASE_URL = https:/$()/www.ehyundai.com
-EHYUNDAI_APP_BASE_URL = https:/$()/hdeapp.ehyundai.com
+EHYUNDAI_BASE_URL = https:/$()/www.ehyundai.co
+EHYUNDAI_APP_BASE_URL = https:/$()/hdeapp.ehyundai.co
 HPOINT_BASE_URL = https:/$()/m.h-point.co.kr:29845
